<resources>
    <string name="app_name">Randnarok</string>
    <string name="nav_events_title">My events</string>
    <string name="nav_form_title">Search for events</string>
    <string name="nav_settings_title">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="city_text">City</string>

    <string name="event_name_label">Event name:</string>
    <string name="event_date_label">Date:</string>
    <string name="event_time_label">Time:</string>
    <string name="event_price_label">Price:</string>
    <string name="event_location_label">Location:</string>
    <string name="hello_blank_fragment">aa</string>
</resources>